--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
         let b=10;
         let res=a+b;
         document.write("total :"+res)
+        let c=90;
+        let d=10;
+        let result1=c*d;
+        document.write("total :"+result1)
+        let e=90;
+        let f=10;
+        let result2=e/f;
+        document.write("total :"+result2)
+        let g=90;
+        let h=10;
+        let result=g-h;
+        document.write("total :"+result)
     </script>
 </body>
 </html>
